--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ importlib-metadata = "^4.8.0"
 httpx = "^0.24.0"
 fastapi = "^0.95.1"
 pydantic = "^1.10.7"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.dev-dependencies]
