--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ httpx = "^0.24.0"
 fastapi = "^0.95.1"
 pydantic = "^1.10.7"
 gunicorn = "^20.1.0"
+loguru = "^0.7.0"
 
 
 [tool.poetry.dev-dependencies]
