dynamic host info in ai-plugin.json for dev/prod

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   oai-monarch-plugin:
     image: oai-monarch-plugin:latest
+    environment:
+      - OAI_PLUGIN_HOST_PORT=https://oai-monarch-plugin.monarchinitiative.org
     restart: unless-stopped
     ports:
       - 8080:8080
