--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ fastapi = "^0.95.1"
 pydantic = "^1.10.7"
 gunicorn = "^20.1.0"
 loguru = "^0.7.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.dev-dependencies]
