--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pydantic = "^1.10.7"
 gunicorn = "^20.1.0"
 loguru = "^0.7.0"
 python-dotenv = "^1.0.0"
+eutils = "^0.6.0"
+isbnlib = "^3.10.14"
 
 
 [tool.poetry.dev-dependencies]
