--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ isbnlib = "^3.10.14"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
 
 [tool.poetry.scripts]
 oai-monarch-plugin = "oai_monarch_plugin.cli:main"
